# aiterx

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml
aiterx/: __init__.py  combine.py  filter.py  subject.py  transform.py  util.py
tests/: test_combine.py  test_filter.py  test_subject.py  test_transform.py
