[build-system]
requires = ['flit_core >=3.2,<4']
build-backend = 'flit_core.buildapi'

[project]
name = 'aiterx'
authors = [{name = 'Gary van der Merwe', email = 'garyvdm@gmail.com'}]
license = {file = 'LICENSE'}
classifiers = ['License :: OSI Approved :: MIT License']
dynamic = ['version', 'description']

[project.optional-dependencies]
test = [
    'asyncstdlib',
    'pytest',
    'pytest-asyncio',
    'flake8',
    'flake8-bugbear',
    'coverage',
    'pytest-cov',
    'mypy; implementation_name=="cpython"',
]
# doc = ['sphinx', 'sphinxcontrib-trio']


[tool.mypy]
files = ['aiterx/*.py']
check_untyped_defs = true
# no_implicit_optional = true
# warn_redundant_casts = true
# warn_unused_ignores = true
# warn_unreachable = true
# disallow_any_generics = true
# disallow_subclassing_any = true
# disallow_untyped_calls = true
# disallow_untyped_defs = true
# disallow_incomplete_defs = true
# disallow_untyped_decorators = true
# warn_return_any = true
# no_implicit_reexport = true
# strict_equality = true

[tool.pytest.ini_options]
asyncio_mode = 'auto'

[tool.black]
line-length = 100
